--- a/src/app/features/components/buy-sell/buy-sell.component.scss
+++ b/src/app/features/components/buy-sell/buy-sell.component.scss
@@ -84,7 +84,7 @@ div {
 @media screen and (max-width: 768px) {
   div {
     margin-top: 25px;
-
+    padding-inline: 0px;
     .dashboard {
       padding: 4px;
 
