--- a/src/app/features/components/wallet/wallet.component.html
+++ b/src/app/features/components/wallet/wallet.component.html
@@ -21,7 +21,7 @@
               <button (click)="openSellModal(crypto)">Sell</button>
             </td>
             <td style="text-align: right;">
-              <button (click)="sellCrypto(crypto.id,crypto.cryptoAmount)">Sell All</button>
+              <button (click)="sellAllCrypto(crypto.id,crypto.cryptoAmount)">Sell All</button>
             </td>
           </tr>
         </tbody>
