--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,7 +15,7 @@
       </li>
       <li class="middle">
         <div class="buy">
-          <a routerLink="/buySell" routerLinkActive="active" ariaCurrentWhenActive="page">
+          <a routerLink="/buy" routerLinkActive="active" ariaCurrentWhenActive="page">
             Buy</a>
         </div>
       </li>
